[Sparsh] Swagger Implemented for API Documentation
