# src/routes/user.route.js
@@ -7,7 +7,7 @@ import { userAuth } from '../middlewares/auth.middleware';
 const router = express.Router();
 
 router.post('/', newUserValidator, userController.createUser);
-router.get('/getAll', userAuth, userController.getAllUsers);
+router.get('/', userAuth, userController.getAllUsers);
 router.post('/login', userController.loginUser);
 router.post('/forgetPassword', userController.forgetPassword);
 router.put('/resetPassword', userController.resetPassword);
